# tap-vendit

./: LICENSE  README.md  catalog-selected.json  catalog.json  config.json  manual_test.py  meltano.yml  products_response.csv  products_response.json  pyproject.toml  secrets.json  test_connection.py  test_orders.py  test_suppliers.py  tox.ini
tap_vendit/: __init__.py  __main__.py  auth.py  client.py  secrets.json  streams.py  swagger.json  tap.py
tap_vendit/schemas/: order.json  order_optiply.json  product.json  purchase_order.json  purchase_order_detail.json  purchase_order_optiply.json  supplier.json  supplier_product.json
tests/: __init__.py  test_core.py
